feat: 로또 게임 시 수동번호 기능 관련 UI 수정